fix (spacing) minor spacing fix in all succs

--- a/public/style.css
+++ b/public/style.css
@@ -51,6 +51,10 @@ nav {
   width: 50px;
 }
 
+.product {
+  margin-bottom: 15px;
+}
+
 .products-wrapper {
   display: flex;
   margin-left: 200px;
@@ -64,7 +68,7 @@ nav {
 }
 .products {
 	display: flex;
-	flex-wrap: wrap;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 	width: 100%;
@@ -72,9 +76,9 @@ nav {
 
 .product-image {
 	display: flex;
-	justify-content: center;
+  justify-content: center;
 	align-items: center;
-	padding: 0 0 2rem 0;
+  padding: 0 0 1rem 0;
 }
 
 .product-image img {
